[gd_scene load_steps=2 format=3 uid="uid://dvwyils6sy4pf"]

[ext_resource type="Script" path="res://MainMenu/mainMenu.gd" id="1_agjgn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_agjgn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Editor" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Flashcard Editor"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Editor" to="." method="_on_editor_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
